test/bad/path1.pacc
/*
nopacc1 "pacc: fatal: multiple expressions in rule \`S'"
*/

S ← "a" ("b" → {5}) "c" → {7}
